kubernetes/huawei/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: $K8S_NAMESPACE
  name: $K8S_APPLICATION_NAME-svc
spec:
  ports:
    - port: 80
      targetPort: 4080
      protocol: TCP
  type: ClusterIP
  selector:
    app: $K8S_APPLICATION_NAME
