kubernetes/huawei/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PATCH, DELETE, PUT, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 30m
  namespace: $K8S_NAMESPACE
  name: $K8S_APPLICATION_NAME-ingress
spec:
  ingressClassName: $K8S_INGRESS_CLASS_NAME
  rules:
  - host: $K8S_APPLICATION_NAME.$K8S_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $K8S_APPLICATION_NAME-svc
            port:
              number: 80
